@@ -47,6 +47,7 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	// macOS(Apple Silicon) 환경에서 Netty DNS 리졸버 에러 해결을 위한 네이티브 라이브러리
@@ -61,8 +62,13 @@ dependencies {
 	// Sentry for error monitoring
 	implementation 'io.sentry:sentry-spring-boot-starter:6.34.0'
 	implementation 'io.sentry:sentry-logback:6.34.0'
+
+	// H2 Database for test code
+	testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
